# Wingspan

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  configs_example.py  main.py  mypy.ini  pyproject.toml  steam_appid.txt
.github/workflows/: run-tests.yml
alembic/: env.py
alembic/versions/: e3d0aa17fbf3_initial_tables.py  e459df704c3e_add_score_table.py
discord/: bot.py
discord/data/: data_controller.py  data_objects.py  db_connection.py  models.py
steamworks/: __init__.pyi  util.pyi
steamworks/interfaces/: apps.pyi  friends.pyi  matchmaking.pyi  microtxn.pyi  screenshots.pyi  users.pyi  userstats.pyi  workshop.pyi
steamworks_types/: __init__.pyi  exceptions.pyi  util.pyi
steamworks_types/interfaces/: apps.pyi  friends.pyi  music.pyi  screenshots.pyi  users.pyi  userstats.pyi  utils.pyi  workshop.pyi
tests/: conftest.py
tests/data/: game_completed.json  game_forfeit.json  game_in_progress.json  game_timed_out.json  game_waiting.json  game_waiting_for_join.json  games.json  scores.json
tests/discord/: test_bot.py
tests/discord/data/: test_data_controller.py  test_data_controller_messages.py  test_data_objects.py  test_db_connection.py
tests/wingspan_api/: test_wapi.py
tests/wingspan_bot/: test_bot.py
tests/wingspan_bot/data/: test_data_controller.py  test_data_controller_messages.py  test_data_objects.py  test_db_connection.py
types/steamworks/: __init__.pyi  enums.pyi  methods.pyi  structs.pyi  util.pyi
types/steamworks/interfaces/: friends.pyi  matchmaking.pyi  microtxn.pyi  music.pyi  (+4 more)
wingspan_api/: wapi.py
wingspan_bot/: bot.py
wingspan_bot/data/: data_controller.py  data_objects.py  db_connection.py  models.py
workflows/: run-tests.yml
