[tool.poetry]
name = "wingspan"
version = "0.1.0"
description = ""
authors = ["Steven Case <stcinc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
nextcord = "^2.0.0-alpha.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
types-requests = "^2.27.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
