[tool.poetry]
name = "wingspan"
version = "0.1.0"
description = ""
authors = ["Steven Case <stcinc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
nextcord = "^2.0.0-alpha.5"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
types-requests = "^2.27.7"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
