[tool.poetry]
name = "wingspan"
version = "1.3.1"
description = ""
authors = ["Steven Case <stcinc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.26.0"
dataclasses-json = "^0.5.7"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.35"
nextcord = "^2.0.0-alpha.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
types-requests = "^2.27.7"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.35"}
pytest-cov = "^3.0.0"
freezegun = "^1.2.1"
pytest-asyncio = "^0.18.3"
pyinstaller = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
